[package]
name = "r-src"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Balasubramanian Narasimhan <naras@stanford.edu>"]
description = "The package provides a source of BLAS and LAPACK via R."
documentation = "https://docs.rs/r-src"
homepage = "https://github.com/blas-lapack-rs/r-src"
repository = "https://github.com/blas-lapack-rs/r-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
libc = "0.2"
