[package]
name = "r-src"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Balasubramanian Narasimhan <b.naras@gmail.com>"]
description = "The package provides a source of BLAS and LAPACK via R."
documentation = "https://docs.rs/r-src"
homepage = "https://github.com/blas-lapack-rs/r-src"
repository = "https://github.com/blas-lapack-rs/r-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"

# Excludes
exclude = [
    ".gitignore",
    ".github/*",
    "ci-cargo.ps1",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
libc = "0.2"

[package.metadata.docs.rs]
changelog = "CHANGELOG.md"